--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -34,9 +34,17 @@
    author = "Wikipedia",
    title = "Lumines --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2015",
-   url = "\url{http://en.wikipedia.org/w/index.php?title=Lumines&oldid=641202548}",
+   url = {http://en.wikipedia.org/w/index.php?title=Lumines&oldid=641202548},
    urldate = "2015-03-04"
  }
+
+@online{reduction,
+    author = {Viggo Kann},
+    url = {http://www.csc.kth.se/utbildning/kth/kurser/DD1352/adk13/schema/F22.pdf},
+    title = {Formella definitioner},
+    month = march,
+    year = {2015},
+}
 
 @article{minesweeper,
   title={Minesweeper is NP-complete},
