--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -21,6 +21,7 @@
 
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{hyperref}
 
 \usepackage[ireport, eng]{pkg/KTHEEtitlepage}
 \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
