--- a/thesis/rules.tex
+++ b/thesis/rules.tex
@@ -4,8 +4,7 @@ Our formalization of Lumines roughly follows the methodology of \citeauthor{tetr
 \begin{description}[style=unboxed, leftmargin=0cm,labelsep=1em]
     \item[The gameboard] The \emph{gameboard} is a grid of $m$ rows and $n$ columns, indexed from bottom-to-top and left-to-right. The $\langle i,j \rangle$th \emph{gridsquare} is either \emph{unfilled}, \emph{black} or \emph{white}. When a gridsquare is either black or white, we call the gridsquare \emph{filled}. In a legal Lumines gameboard, no gridsquare is unfilled if some gridsquare above it is filled.
 
-    \item[Game pieces] The six blocks pictured in Figure~\ref{fig:pieces} are the exact six permutations one can create by coloring the four corners of a square with two colors. A \emph{block state P} is 3-tuple, consisting of: 
-
+    \item[Game pieces] The six blocks pictured in \hyperref[fig:pieces]{figure \ref*{fig:pieces}} are the exact six permutations one can create by coloring the four corners of a square with two colors. A \emph{block state P} is 3-tuple, consisting of: 
     \begin{enumerate}
         \item \emph{block colors}, a 4-tuple $\in \{B,W\}^4$ corresponding to the corner colors of the block, counted clockwise from the lower-left corner. The six blocks correspond to the following piece colors:
 
