--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -28,6 +28,7 @@ When showing NP-completeness in Tetris, 3-Partition instances were mapped to ins
 
 
 \subsection{Similarities between Tetris and Lumines}
+\label{subsub:sim}
 
 The existing research on Lumines that we have been able to find consists of a paper studying effective strategies. In this paper we learn that there exists strategies that can never lose, no matter what sequence of pieces are dropped. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces. Another relevant difference the paper brings up is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
 
