--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -42,6 +42,7 @@
 
 \input{thesis/introduction.tex}
 \input{thesis/background.tex}
+\input{thesis/formal.tex}
 \input{thesis/method.tex}
 \printbibliography
 \end{document}
