more on prev studies

--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -7,6 +7,24 @@
   publisher={Springer}
 }
 
+@inproceedings{push1,
+  title={PushPush and Push-1 are NP-hard in 2D},
+  author={Demaine, Erik D. and Demaine, Martin L. and Joseph O'Rourke},
+  booktitle={Proceedings of the 12th Annual Canadian Conference on Computational Geometry},
+  pages={211--219},
+  month=august,
+  year={2000}
+}
+
+@inproceedings{pushpushk,
+  title={PushPush-k is PSPACE-Complete},
+  author={Demaine, Erik D. and Hoffman, Michael and Holzer, Markus},
+  booktitle={Proceedings of the 3rd International Conference on Fun with Algorithms},
+  pages={159--170},
+  month=may,
+  year={2004}
+}
+
 @article{candy,
   author    = {Luciano Gual{\`{a}} and
                Stefano Leucci and
