--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -18,7 +18,7 @@ The video game Lumines was released in December 2004 in Japan for the PSP platfo
     \label{fig:pieces}
 \end{figure}
 
-Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user can rotate and shift the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block reach existing terrain, it can no longer be shifted or rotated by the player. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is not supported by terrain will fall down until it is. The player is then presented with the next block.
+Lumines is a two-dimensional grid game, in which a sequence of $2 \times 2$ dichromatic \textit{blocks} falls, and the user rotates and shifts the block before its bottom \text{cells} reaches other cells, \textit{terrain}, in the gameboard. When the block reach existing terrain, it is no longer possible to shift or rotate the block. If both bottom cells of the block is supported by existing terrain, the block stays put on that terrain. Otherwise, the half of the block that is not supported by terrain will fall down until it is. The player is then presented with the next block.
 
 \begin{figure}[H]
     \centering
@@ -121,16 +121,14 @@ If at any point the player forms a monochromatic $2 \times 2$ square, all cells 
     \caption{Marking of $2 \times 2$ monochromatic squares (from \cite{lumines})}
 \end{figure}
 
-The version of Lumines found in the actual video games is played on a gameboard with 16 columns and 10 rows. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
-
-\subsection{Problem definition}
-As is often the case with computational complexity analysis, our thesis will consider the generalized version of the game, which is played on a gameboard with $n$ rows and $m$ columns. Our thesis will seek to formalize and (to the necessary degree) simplify Lumines, and explore this new system's computational complexity characteristics. The thesis will focus on certain goals of the game by translating them into decision problems in this system.
-
-The methodology used is standard procedure in the domain of computational complexity. At first we examine how easy it is to verify a given solution to our problem, which will tell us if the problem lies in NP. We will then try to find a suitable known NP-complete problem and reduce it to our problem, which in turn will tell us if the problem is NP-hard. If both these conditions are satisfied, it follows from definition that the problem is NP-complete. A brief review of this terminology is provided in \textbf{todo:background}.
-
-While the sweep-line is undoubtedly an important characteristic of Lumines, we have decided to assume that all marked terrain is instantly cleared. We will also consider the offline version of the game, where the whole sequence of blocks is known beforehand, rather than the having the block types generated probabilistically. This is our two main simplifications, altough a more thorough is of course provided in the relevant parts of \textbf{todo:method}. The impact of these simplifications on how much the results can tell us about the actual games is considered in \textbf{todo:discussion}.
+The version of Lumines found in actual video games is played on a $10 \times 16$-gameboard. The goal of the standard game mode in Lumines is to survive, to keep placing blocks inside the gameboard, for as long as possible and clear as much terrain as possible in the process. The blocks given to the player is generated randomly, and 3-block lookahead is provided. The game starts on partially filled gameboard, which varies in size depending on the difficulty level \cite{lumines}.
 
 \subsection{Problem statement}
+This report considers the generalized version of the game, which is played on an $n \times m$-gameboard. The authors seeks to formalize and  simplify Lumines, and explore this new system's computational complexity characteristics. Certain goals of the game are considered by translating them into decision problems in this system.
+
+While the sweep-line is a core characteristic of Lumines, this report considers all marked terrain as instantly cleared. Furthermore the whole sequence of blocks is considered to be known beforehand. This will be referred to as the \textit{offline} version of the game, in contrast to the \textit{online} version, where the blocks are generated probabilistically. These are the two main simplifications, although a more thorough discussion is provided in \textbf{todo:method}. The impact of these simplifications on the validity of the results is considered in \textbf{todo:discussion}.
+
+The main Lumines goals this paper examines are:
 \begin{itemize}
         \item Is (standard mode) Lumines NP-complete?
         \item Are all game modes of Lumines equally hard?
@@ -138,4 +136,4 @@ While the sweep-line is undoubtedly an important characteristic of Lumines, we h
 
 \subsection{Motivation}
 
-We find interest in analyzing Lumines because it is to our knowledge not very researched when it comes to computational complexity. Tetris, a similar puzzle game, has been more thoroughly examined in recent years, and it seems interesting to us how Lumines will compare. Knowing more about the computational complexity of the game can give us an understanding on what would be required for the development of an A.I, capable of solving the game. We also believe that the result of this study can help us understand more about the nature of computational complexity of video games in general, especially 2-dimensional grid games. With results from this and other reports on similar matters, one might be able to generalize and find a correlation between certain game characteristics and classes of computational complexity. 
+Lumines is a game of interest because to the authors' knowledge it's not well researched from the perspective of computational complexity. Several similar games has been more thoroughly researched in recent years and comparing Lumines to these findings might yield interesting results. New findings on the computational complexity of Lumines may aid in the development of video game artificial intelligence. Our understanding of computational complexity in generic 2-dimensional grid games in may also benefit from this research. Combining results from this report with results from previous similar research might make it possible to find a correlation between certain game characteristics and classes of computational complexity.
