--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -16,15 +16,12 @@ The \textit{Subset Sum} Problem is defined as follows \cite[p.~491]{algorithm}:
 Given natural numbers $w_1, \ldots, w_n$, and a target number $W$, is there a subset of $\{w_1, \ldots, w_n \}$ that adds up precisely to $W$?
 \end{quote}
 
-The Subset Sum Problem plays a crucial role in our paper; it is the problem we have chosen to reduce to the Lumines problem. It is known to be NP-complete \cite[p.~492]{algorithm}. In fact it is a special case of the Knapsack Problem \cite[p.~491]{algorithm}, one of Karp's 21 NP-complete problems he discusses in his 1972 paper \cite{karp}.
+The Subset Sum Problem plays a crucial role in this report; it is the chosen tproblem to reduce to the Lumines problem. It is known to be NP-complete \cite[p.~492]{algorithm}. In fact it is a special case of the Knapsack Problem \cite[p.~491]{algorithm}, one of Karp's 21 NP-complete problems he discusses in his 1972 paper \cite{karp}.
 
 \subsection{Previous studies}
-
-Several reports concerning computational complexity in video games have been published in recent years. During our research we have read some of these reports to get a good understanding what research has been made. These reports have covered games such as classical Nintendo games \cite{classic}, Lemmings \cite{lemmings}, Minesweeper \cite{minesweeper}, Bejeweled \cite{candy} and Tetris. \cite{tetris}
-
 \subsubsection{Classical Nintendo Games}
 
-In the paper on Classical Nintendo Games the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard. We learn that it is easy to understand that most games are members of PSPACE because their behaviour is a deterministic function of the player's controller input. The paper focus on the reachability problem in the aforementioned games, that is if it is possible to get from point A to point B on a generalized gameboard. Using the NP-complete problem 3-SAT the authors build a framework of ``gadgets'' to prove NP-hardness. For PSPACE-hardness a similar framework is used with the True Quantified Boolean Formula. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the Push-1 \cite{push1} and PushPush-1 \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness in some of the games implementing these games as puzzles. 
+In the paper on Classical Nintendo Games the computational complexity of games in the popular Nintendo series Legend of Zelda, Mario, Metroid, Donkey Kong and Pokémon are proven to be either NP- or PSPACE-hard. The paper states that it is easy to understand that most games are members of PSPACE because their behaviour is a deterministic function of the player's controller input. The paper focus on the reachability problem in the aforementioned games, that is if it is possible to get from point A to point B on a generalized gameboard. Using the NP-complete problem 3-SAT the authors build a framework of ``gadgets'' to prove NP-hardness. For PSPACE-hardness a similar framework is used with the True Quantified Boolean Formula. The framework gives the authors a simple way to show NP- and PSPACE-hardness by building the gadgets as gameboards in the respective games. The authors also use previous studies on the Push-1 \cite{push1} and PushPush-1 \cite{pushpushk} to show NP-hardness, respectively PSPACE-hardness in some of the games implementing these games as puzzles. 
 
 \subsubsection{Lemmings}
 
@@ -37,8 +34,8 @@ In the paper on Classical Nintendo Games the computational complexity of games i
 \subsection{Similarities between Tetris and Lumines}
 \label{subsub:sim}
 
-The existing research on Lumines that we have been able to find consists of a paper studying effective strategies. In this paper we learn that there exists strategies that can never lose, no matter what sequence of pieces are dropped. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces. Another relevant difference the paper brings up is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
+The existing research on Lumines largely focus on effective strategies. One paper states that there exists strategies that can never lose, no matter what sequence of pieces are dropped \cite{lumines}. This is different to Tetris where losing can be inevitable if the computer is allowed to change the sequence according to how the player organizes the pieces \textbf{todo: source}. Another relevant difference the brought up in prior research is that in Lumines it is possible to create terrain that can not be cleared, while in Tetris a gameboard can always be cleared if the player is given an appropriate sequence of pieces.
 
-In the standard Lumines game, the gameboard is 16 columns and 10 rows while standard Tetris is 10 columns and 20 rows. In both games, when any block is fixed outside of the gameboard the player lose the game. While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the line has sweeped the marked area.
+The standard Lumines game is played on a $10 \times 16$-gameboard, while standard Tetris is played on a $20 \times 10$-gameboard. In both games, when any block is fixed outside of the gameboard the player loses the game. While in Tetris a completed row is removed instantly, the marked cells in Lumines is not removed until the sweep-line has scanned the area.
 
-While there might not be as many ways to build unique terrain in Lumines because of the fact the falling blocks can be seperated when the block is fixed, our theorem is that Lumines is NP-hard. Intuitively there seems to be many ways to combine the different blocks and it doesn't seem to exist an easy way to calculate the number of blocks that can be cleared by a given sequence. Since Tetris is NP-complete and has a couple of significant similarities to Lumines, we find even more reason to believe that this theorem is likely to be true and is worth investigating.
+The fact that falling blocks may seperate after being fixed in Lumines means that there aren't as many ways to build unique terrain as in Tetris. Nevertheless, some significant similarities exist between the two games. This makes existing Tetris research a valuable resource for this report.
