--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -18,7 +18,7 @@
 \usepackage{mathtools}
 \usepackage{enumitem}
 \usepackage{calc}
-\usepackage{pdfpages}
+\usepackage{multido}
 
 \usepackage{caption}
 \usepackage{subcaption}
