--- a/thesis/background.tex
+++ b/thesis/background.tex
@@ -25,11 +25,18 @@ In the paper on Classical Nintendo Games the computational complexity of games i
 
 \subsubsection{Lemmings}
 
-\subsubsection{Minesweeper}
+Lemmings is a 2D puzzle-platformer game where the objective is to guide a couple of lemmings through obstacles to reach a designated exit. Much like the proof of the classical Nintendo games, the proof that Lemmings is NP-complete uses gadgets. The authors use the 3-SAT to prove NP-hardness. 
 
-\subsubsection{Bejeweled}
+\subsubsection{Minesweeper}
+Minesweeper is a popular puzzle game shipped with the Windows operating system. The author use SAT to prove NP-hardness by building Minesweeper configurations of logic circuits e.g. NOT-, AND- and XOR-gates \cite{minesweeper}.
+
+\subsubsection{Match-three games}
+
+Candy Crush and Bejeweled are both popular puzzle games with the same concept. The game consists of grids where each cell consists one ``gem''. The player is allowed to swap a gems position in vertical and horizontal directions if she is able to match three of a kind. When three of a kind is matched, the gems are ``popped'' and the gems above the now empty cells take their place. At the same time, the empty cells at the top are filled with new gems. The authors consider the offline version off Bejeweled for their studies and show NP-hardness using 1in3PSAT. \cite{candy}
 
 \subsubsection{Tetris}
+
+
 
 \subsection{Similarities between Tetris and Lumines}
 \label{subsub:sim}
